// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly for anonymous desktop 1`] = `
<header
  className="site-header-desktop bg-white border-b border-neutral-100 sticky top-0 z-40"
>
  <a
    className="sr-only focus:not-sr-only focus:absolute focus:z-50 focus:p-2 focus:bg-white focus:text-brand"
    href="#main"
  >
    Skip to main content
  </a>
  <div
    className="site-header-desktop__inner max-w-7xl mx-auto px-4 sm:px-6 "
  >
    <div
      className="site-header-desktop__row flex items-center h-14"
    >
      <a
        className="flex items-center shrink-0 mr-6 gap-2 no-underline"
        href="http://localhost:18000/dashboard"
      >
        <span
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#590D22",
              "borderRadius": "8px",
              "display": "inline-flex",
              "flexShrink": 0,
              "height": "32px",
              "justifyContent": "center",
              "width": "32px",
            }
          }
        >
          <span
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Inter, sans-serif",
                "fontSize": "16px",
                "fontWeight": 800,
                "letterSpacing": "-0.5px",
                "lineHeight": 1,
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            {
              "color": "#111827",
              "fontFamily": "Inter, sans-serif",
              "fontSize": "15px",
              "fontWeight": 700,
              "letterSpacing": "-0.3px",
            }
          }
        >
          WutiSkill
        </span>
      </a>
      <nav
        aria-label="Main"
        className="site-header-desktop__main-nav flex items-center gap-1"
      >
        <a
          className="
            text-sm font-medium text-neutral-700 px-3 py-2 rounded-lg
            transition-colors duration-200
            hover:text-neutral-900 hover:bg-neutral-100
            
            
          "
          href="http://localhost:18000/dashboard"
          onClick={null}
        >
          Discover
        </a>
        <a
          className="
            text-sm font-medium text-neutral-700 px-3 py-2 rounded-lg
            transition-colors duration-200
            hover:text-neutral-900 hover:bg-neutral-100
            
            
          "
          href="http://localhost:18000/dashboard"
          onClick={null}
        >
          My courses
        </a>
      </nav>
      <div
        className="flex-1"
      />
      <nav
        aria-label="Secondary"
        className="site-header-desktop__secondary-nav flex items-center gap-2"
      >
        <a
          className="text-sm font-medium text-neutral-700 hover:text-neutral-900 px-3 py-2 transition-colors"
          href="http://localhost:18000/login"
        >
          Sign in
        </a>
        <a
          className="text-sm font-semibold text-white bg-brand px-5 py-2 rounded-full hover:bg-brand/90 transition-colors"
          href="http://localhost:18000/register"
        >
          Register
        </a>
      </nav>
    </div>
  </div>
</header>
`;

exports[`<Header /> renders correctly for anonymous mobile 1`] = `
<header
  aria-label="Main"
  className="site-header-mobile site-header-mobile--sticky sticky top-0 z-40"
>
  <a
    className="nav-skip sr-only sr-only-focusable"
    href="#main"
  >
    Skip to main content
  </a>
  <div
    className="site-header-mobile__section site-header-mobile__section--main-trigger"
  >
    <div
      className="menu site-header-mobile__menu site-header-mobile__menu--main"
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        aria-label="Main Menu"
        className="menu-trigger icon-button site-header-mobile__icon-button"
        onClick={[Function]}
        title="Main Menu"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height="24px"
          role="img"
          style={
            {
              "height": "1.5rem",
              "width": "1.5rem",
            }
          }
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="5"
          />
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="11"
          />
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="17"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="site-header-mobile__section site-header-mobile__section--brand"
  >
    <a
      className="flex items-center shrink-0 mr-6 gap-2 no-underline"
      href="http://localhost:18000/dashboard"
      itemType="http://schema.org/Organization"
    >
      <span
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#590D22",
            "borderRadius": "8px",
            "display": "inline-flex",
            "flexShrink": 0,
            "height": "32px",
            "justifyContent": "center",
            "width": "32px",
          }
        }
      >
        <span
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter, sans-serif",
              "fontSize": "16px",
              "fontWeight": 800,
              "letterSpacing": "-0.5px",
              "lineHeight": 1,
            }
          }
        >
          W
        </span>
      </span>
      <span
        style={
          {
            "color": "#111827",
            "fontFamily": "Inter, sans-serif",
            "fontSize": "15px",
            "fontWeight": 700,
            "letterSpacing": "-0.3px",
          }
        }
      >
        WutiSkill
      </span>
    </a>
  </div>
  <div
    className="site-header-mobile__section site-header-mobile__section--account"
  >
    <nav
      aria-label="Secondary"
      className="menu site-header-mobile__menu site-header-mobile__menu--user"
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        aria-label="Account Menu"
        className="menu-trigger icon-button site-header-mobile__icon-button"
        onClick={[Function]}
        title="Account Menu"
      >
        <div
          className="site-header-mobile__user-toggle "
        >
          <span
            className="site-header-avatar inline-flex items-center justify-center overflow-hidden rounded-full bg-neutral-100 border border-neutral-200 site-header-mobile__avatar"
            style={
              {
                "height": "1.75rem",
                "width": "1.75rem",
              }
            }
          >
            <span
              className="pgn__icon site-header-avatar__icon w-5 h-5 text-neutral-500"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 5.9a2.1 2.1 0 1 1 0 4.2 2.1 2.1 0 0 1 0-4.2m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <span
            className="pgn__icon site-header-mobile__user-caret"
          >
            <svg
              aria-hidden={true}
              fill="none"
              focusable={false}
              height={24}
              role="img"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </button>
    </nav>
  </div>
</header>
`;

exports[`<Header /> renders correctly for authenticated desktop 1`] = `
<header
  className="site-header-desktop bg-white border-b border-neutral-100 sticky top-0 z-40"
>
  <a
    className="sr-only focus:not-sr-only focus:absolute focus:z-50 focus:p-2 focus:bg-white focus:text-brand"
    href="#main"
  >
    Skip to main content
  </a>
  <div
    className="site-header-desktop__inner max-w-7xl mx-auto px-4 sm:px-6 "
  >
    <div
      className="site-header-desktop__row flex items-center h-14"
    >
      <a
        className="flex items-center shrink-0 mr-6 gap-2 no-underline"
        href="http://localhost:18000/dashboard"
      >
        <span
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#590D22",
              "borderRadius": "8px",
              "display": "inline-flex",
              "flexShrink": 0,
              "height": "32px",
              "justifyContent": "center",
              "width": "32px",
            }
          }
        >
          <span
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Inter, sans-serif",
                "fontSize": "16px",
                "fontWeight": 800,
                "letterSpacing": "-0.5px",
                "lineHeight": 1,
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            {
              "color": "#111827",
              "fontFamily": "Inter, sans-serif",
              "fontSize": "15px",
              "fontWeight": 700,
              "letterSpacing": "-0.3px",
            }
          }
        >
          WutiSkill
        </span>
      </a>
      <nav
        aria-label="Main"
        className="site-header-desktop__main-nav flex items-center gap-1"
      >
        <a
          className="
            text-sm font-medium text-neutral-700 px-3 py-2 rounded-lg
            transition-colors duration-200
            hover:text-neutral-900 hover:bg-neutral-100
            
            
          "
          href="http://localhost:18000/dashboard"
          onClick={null}
        >
          Discover
        </a>
        <a
          className="
            text-sm font-medium text-neutral-700 px-3 py-2 rounded-lg
            transition-colors duration-200
            hover:text-neutral-900 hover:bg-neutral-100
            
            
          "
          href="http://localhost:18000/dashboard"
          onClick={null}
        >
          My courses
        </a>
      </nav>
      <div
        className="flex-1"
      />
      <nav
        aria-label="Secondary"
        className="site-header-desktop__secondary-nav flex items-center gap-2"
      >
        <div
          className="site-header-desktop__separator w-px h-6 bg-neutral-200 mx-1"
        />
        <div
          className="site-header-desktop__user-menu relative"
        >
          <div
            className="menu null"
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup="menu"
              aria-label="Account menu for edX"
              className="menu-trigger flex items-center bg-transparent border-none cursor-pointer p-0"
              onClick={[Function]}
            >
              <div
                className="site-header-desktop__user-toggle  flex items-center gap-2"
              >
                <span
                  className="site-header-avatar inline-flex items-center justify-center overflow-hidden rounded-full bg-neutral-100 border border-neutral-200 site-header-desktop__avatar "
                  style={
                    {
                      "height": "1.9rem",
                      "width": "1.9rem",
                    }
                  }
                >
                  <span
                    className="pgn__icon site-header-avatar__icon w-5 h-5 text-neutral-500"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      focusable={false}
                      height={24}
                      role="img"
                      viewBox="0 0 24 24"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 5.9a2.1 2.1 0 1 1 0 4.2 2.1 2.1 0 0 1 0-4.2m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  className="pgn__icon site-header-desktop__user-caret  w-4 h-4 text-neutral-400"
                >
                  <svg
                    aria-hidden={true}
                    fill="none"
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </div>
        </div>
      </nav>
    </div>
  </div>
</header>
`;

exports[`<Header /> renders correctly for authenticated mobile 1`] = `
<header
  aria-label="Main"
  className="site-header-mobile site-header-mobile--sticky sticky top-0 z-40"
>
  <a
    className="nav-skip sr-only sr-only-focusable"
    href="#main"
  >
    Skip to main content
  </a>
  <div
    className="site-header-mobile__section site-header-mobile__section--main-trigger"
  >
    <div
      className="menu site-header-mobile__menu site-header-mobile__menu--main"
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        aria-label="Main Menu"
        className="menu-trigger icon-button site-header-mobile__icon-button"
        onClick={[Function]}
        title="Main Menu"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height="24px"
          role="img"
          style={
            {
              "height": "1.5rem",
              "width": "1.5rem",
            }
          }
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="5"
          />
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="11"
          />
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="17"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="site-header-mobile__section site-header-mobile__section--brand"
  >
    <a
      className="flex items-center shrink-0 mr-6 gap-2 no-underline"
      href="http://localhost:18000/dashboard"
      itemType="http://schema.org/Organization"
    >
      <span
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#590D22",
            "borderRadius": "8px",
            "display": "inline-flex",
            "flexShrink": 0,
            "height": "32px",
            "justifyContent": "center",
            "width": "32px",
          }
        }
      >
        <span
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter, sans-serif",
              "fontSize": "16px",
              "fontWeight": 800,
              "letterSpacing": "-0.5px",
              "lineHeight": 1,
            }
          }
        >
          W
        </span>
      </span>
      <span
        style={
          {
            "color": "#111827",
            "fontFamily": "Inter, sans-serif",
            "fontSize": "15px",
            "fontWeight": 700,
            "letterSpacing": "-0.3px",
          }
        }
      >
        WutiSkill
      </span>
    </a>
  </div>
  <div
    className="site-header-mobile__section site-header-mobile__section--account"
  >
    <nav
      aria-label="Secondary"
      className="menu site-header-mobile__menu site-header-mobile__menu--user"
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        aria-label="Account Menu"
        className="menu-trigger icon-button site-header-mobile__icon-button"
        onClick={[Function]}
        title="Account Menu"
      >
        <div
          className="site-header-mobile__user-toggle "
        >
          <span
            className="site-header-avatar inline-flex items-center justify-center overflow-hidden rounded-full bg-neutral-100 border border-neutral-200 site-header-mobile__avatar"
            style={
              {
                "height": "1.75rem",
                "width": "1.75rem",
              }
            }
          >
            <span
              className="pgn__icon site-header-avatar__icon w-5 h-5 text-neutral-500"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 5.9a2.1 2.1 0 1 1 0 4.2 2.1 2.1 0 0 1 0-4.2m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <span
            className="pgn__icon site-header-mobile__user-caret"
          >
            <svg
              aria-hidden={true}
              fill="none"
              focusable={false}
              height={24}
              role="img"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </button>
    </nav>
  </div>
</header>
`;
